# Account

./: .gitignore  CMakeLists.txt
include/accounts/: accounts.h
include/functions/: functions.h
src/: accounts.cc  consoleapplication.cc  functions.cc
tests/: accounts_tests.cc
